bin/tests/snapshots/manual_inherit_from__fix_bcd1b213c6dc82ccfefaca266dc33f7357f692ba61847f3a3281bfb7001992ab.snap
---
source: bin/tests/manual_inherit_from.rs
---
let a.b = 2; in { c = a.c; }

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let a.b = 2; in { c = a.c; }
+let a.b = 2; in { inherit (a) c; }
