bin/tests/snapshots/manual_inherit_from__lint_028c2b7d873c7d864c3d8c6c90e32812eb9bd9fc519d0c966ddfdeb33a3fb0d0.snap
---
source: bin/tests/manual_inherit_from.rs
---
let a.b = 2; in { b = a.b; }

---
[W04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:19]
   │
 1 │ let a.b = 2; in { b = a.b; }
   ·                   ────┬───  
   ·                       ╰───── This assignment is better written with inherit
───╯
