bin/tests/snapshots/manual_inherit_from__lint_b169f7b47a1e5a5efcfc052399cd20e9c361b5dcdaeca5c91d7719a2b9561712.snap
---
source: bin/tests/manual_inherit_from.rs
expression: snapshot
---
expression:
let foo = { }; in { x = foo.x or false; }
---
