bin/tests/snapshots/manual_inherit_from__lint_bcd1b213c6dc82ccfefaca266dc33f7357f692ba61847f3a3281bfb7001992ab.snap
---
source: bin/tests/manual_inherit_from.rs
---
let a.b = 2; in { c = a.c; }

---
[W04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:19]
   │
 1 │ let a.b = 2; in { c = a.c; }
   ·                   ────┬───  
   ·                       ╰───── This assignment is better written with inherit
───╯
