bin/tests/snapshots/manual_inherit_from__lint_d185f6bcc057384cb2f1ae3abb567fd17572eaaa2c3209abd0f527f3fe7e26a1.snap
---
source: bin/tests/manual_inherit_from.rs
---
expression:
let a.b = 2; in { b = a.b; }
---
[W04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:19]
   │
 1 │ let a.b = 2; in { b = a.b; }
   ·                   ────┬───  
   ·                       ╰───── This assignment is better written with inherit
───╯
