bin/tests/snapshots/manual_inherit_from__lint_fddffc3b779f8727d3ce7613925d3d3df2bc6cc9a30841fe104e26219ed72187.snap
---
source: bin/tests/manual_inherit_from.rs
expression: snapshot
---
expression:
let a.b = 2; in { c = a.c; }
---
[W04] Warning: Assignment instead of inherit from
   ╭─[<temp_file_path>:1:19]
   │
 1 │ let a.b = 2; in { c = a.c; }
   ·                   ────┬───  
   ·                       ╰───── This assignment is better written with inherit
───╯
